fix delete route
